<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView

        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@android:color/black"
        android:id="@+id/header" />

    <LinearLayout
        android:id="@+id/uname_block"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_username"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:id="@+id/username" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/lbl_enter_username"
            android:ems="10"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/fld_username" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pwd_block"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uname_block"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pwd"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:id="@+id/pw" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:fontFamily="san_seri"
            android:hint="@string/lbl_enter_pwd"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            android:id="@+id/fid_pwd" />
    </LinearLayout>

    <Button
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:id="@+id/btn_login"
        android:layout_below="@+id/pwd_block"
        android:textSize="13sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
